--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,9 +26,10 @@
           </div>
         </nav>
 
+ <div class="container">
+    <%= yield %>
+  </div>
   
   
-<%= yield %>
-
 </body>
 </html>
