--- a/app/views/devise/registrations/_pro_form.html.erb
+++ b/app/views/devise/registrations/_pro_form.html.erb
@@ -1,7 +1,8 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field form-group">
+<%= hidden_field_tag 'plan', params[:plan] %>  
+<div class="field form-group">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, class: 'form-control' %>
   </div>
@@ -34,7 +35,7 @@
   </div>
 
   <div class="actions form-group">
-    <%= f.submit "Sign up", class: 'btn btn-success' %>
+    <%= f.submit "Sign up", class: 'btn btn-success', id: 'form-submit-btn' %>
   </div>
 <% end %>
 
