--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -16,7 +16,10 @@
           <%= f.label :job_title %>
           <%= f.select :job_title, ['Developer', 'Entrepreneur', 'Investor'], {}, class: 'form-control' %>
         </div>
-   
+         <div>
+      <%= f.label :phone_number %>
+      <%= f.text_field :phone_number, class: 'form-control' %>
+      </div>
     
       <div class="form-group">
         <%= f.label :contact_email %>
