--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -18,7 +18,7 @@
               <%= link_to user do %>
                 <h2><%= user.profile.first_name %> <%= user.profile.last_name %></h2>
               <% end %>
-              <p><%= user.profile.job_title %>
+              <p><%= user.profile.job_title %> <span class="label label-danger">PRO</span></p> 
             </div>
           </div>
         </li>
